--- a/work.html
+++ b/work.html
@@ -120,7 +120,7 @@
                 </div>
                
        <div class="img-box">
-                    <img src="images/anggara.jpg" alt="">
+                    <img src="images/dvd.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
