--- a/index.html
+++ b/index.html
@@ -305,7 +305,20 @@
                     </h3>
                   </div>
                 </div>
-               
+                <div class="img-box">
+                    <img src="images/dvd.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="https://sites.google.com/view/davidekaunsiawan/profil">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      David Eka Unsiawan
+                    </h3>
+                  </div>
+                </div>  
           <div class="col-md-6">
             <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="img-box">
