--- a/work.html
+++ b/work.html
@@ -118,7 +118,9 @@
                     </h3>
                   </div>
                 </div>
-               
+       <div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">         
        <div class="img-box">
                     <img src="images/dvd.jpg" alt="">
                   </div>
