--- a/index.html
+++ b/index.html
@@ -415,8 +415,8 @@
                 Information
               </h5>
               <p>
-                siswa laki laki:
-                siswa perempuan:
+                siswa laki laki:19
+                siswa perempuan:14
               </p>
             </div>
 
