--- a/work.html
+++ b/work.html
@@ -121,7 +121,7 @@
        <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">         
-       <div class="img-box">
+      
                     <img src="images/dvd.jpg" alt="">
                   </div>
                   <div class="detail-box">
@@ -222,8 +222,8 @@
                 Information
               </h5>
               <p>
-                siswa laki laki:
-                siswa perempuan:
+                siswa laki laki:19
+                siswa perempuan:14
               </p>
             </div>
 
