--- a/work.html
+++ b/work.html
@@ -222,8 +222,9 @@
                 Information
               </h5>
               <p>
-                siswa laki laki:19
-                siswa perempuan:14
+<h3>siswa</h3>
+                 laki laki:19
+                 perempuan:14
               </p>
             </div>
 
