--- a/work.html
+++ b/work.html
@@ -173,10 +173,10 @@
             </span>
           </div>
           <div class="social_box">
-            <a href="#">
+            <a href="tjktcxi@gmail.com">
               <img src="images/mail.png" alt="">
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
               <img src="images/instagram.png" alt="">
             </a>
             <a href="#">
