--- a/about.html
+++ b/about.html
@@ -129,33 +129,6 @@
 
   <!-- about section -->
 
-  <section class="about_section layout_padding">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-10 col-lg-9 mx-auto">
-          <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
-          </div>
-        </div>
-      </div>
-      <div class="detail-box">
-        <h2>
-          Wali Kelas
-        </h2>
-        <p>
-        Hani Nurhasanah S.pd
-        </p>
-        <a href="">
-          instagram
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <!-- end about section -->
-
-  <!-- info section -->
-
   <section class="info_section ">
     <div class="info_container layout_padding-top">
       <div class="container">
@@ -167,10 +140,10 @@
             </span>
           </div>
           <div class="social_box">
-            <a href="#">
+            <a href="tjktcxi@gmail.com">
               <img src="images/mail.png" alt="">
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
               <img src="images/instagram.png" alt="">
             </a>
             <a href="#">
@@ -216,8 +189,9 @@
                 Information
               </h5>
               <p>
-                siswa laki laki:
-                siswa perempuan:
+<h3>siswa</h3>
+                 laki laki:19
+                 perempuan:14
               </p>
             </div>
 
