--- a/category.html
+++ b/category.html
@@ -166,7 +166,7 @@
 
   <!-- info section -->
 
-  <section class="info_section ">
+   <section class="info_section ">
     <div class="info_container layout_padding-top">
       <div class="container">
         <div class="info_top">
@@ -177,10 +177,10 @@
             </span>
           </div>
           <div class="social_box">
-            <a href="#">
+            <a href="tjktcxi@gmail.com">
               <img src="images/mail.png" alt="">
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
               <img src="images/instagram.png" alt="">
             </a>
             <a href="#">
@@ -226,8 +226,9 @@
                 Information
               </h5>
               <p>
-                siswa laki laki:
-                siswa perempuan:
+<h3>siswa</h3>
+                 laki laki:19
+                 perempuan:14
               </p>
             </div>
 
