--- a/index.html
+++ b/index.html
@@ -361,10 +361,10 @@
             </span>
           </div>
           <div class="social_box">
-            <a href="#">
+            <a href="tjktcxi@gmail.com">
               <img src="images/mail.png" alt="">
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/xi_tjktc.nesapa?igsh=MTZ3NHYzdjZteW1mZg==">
               <img src="images/instagram.png" alt="">
             </a>
             <a href="#">
@@ -410,8 +410,9 @@
                 Information
               </h5>
               <p>
-                siswa laki laki:19
-                siswa perempuan:14
+<h3>siswa</h3>
+                 laki laki:19
+                 perempuan:14
               </p>
             </div>
 
