--- a/work.html
+++ b/work.html
@@ -151,7 +151,22 @@
                     </h3>
                   </div>
                 </div>
-      
+   <div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="https://sites.google.com/view/reni-dwi-oktavia-fortopolio/halaman-muka">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      Reni Dwi Oktavia
+                    </h3>
+                  </div>
+                </div>   
             <div class="collapse" id="collapseTwo" aria-labelledby="headingTwo" data-parent="#accordion">
               <div class="img-box">
                 <img src="images/logoc.png" alt="">
