--- a/index.html
+++ b/index.html
@@ -329,6 +329,22 @@
                   </div>
                   <div class="detail-box">
                     <h5>
+                      <a href="https://sites.google.com/view/fortofoliosejarahdzaki/halaman-muka">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      Dzaki Fauzan
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
                       <a href="https://sites.google.com/view/portofolioirginurdiansyah/halaman-muka">
                         selengkapnya
                       </a>
