--- a/index.html
+++ b/index.html
@@ -393,6 +393,22 @@
                   </div>
                   <div class="detail-box">
                     <h5>
+                      <a href="https://muchamad-fikri-fauzan2.webnode.page/">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      Muchamad Fikri Fauzan
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
                       <a href="https://sites.google.com/view/munawardaroby/halaman-muka">
                         selengkapnya
                       </a>
@@ -415,6 +431,22 @@
                     </h5>
                     <h3>
                       Pitrio Nuranugrah
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="https://sites.google.com/view/raffi-jahtita/halaman-muka">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      Raffi Jahtita
                     </h3>
                   </div>
                 </div>
