--- a/index.html
+++ b/index.html
@@ -466,6 +466,22 @@
                     </h3>
                   </div>
                 </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="https://sites.google.com/view/septiannnn/halaman-muka">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      Septian Ramdani
+                    </h3>
+                  </div>
+                </div>
           <div class="col-md-6">
             <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="img-box">
