--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
                 
-                    <img src="images/dvd.jpg" alt="">
+                    <img src="images/dpd.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -325,7 +325,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/dki.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -341,7 +341,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/hfy.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -357,7 +357,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/irg.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -373,7 +373,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/kh.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -389,7 +389,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/fkr.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -405,7 +405,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/mnwr.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -421,7 +421,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/ptri.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -437,7 +437,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/rfj.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -453,7 +453,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/rni.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -469,7 +469,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/sptn.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
