--- a/work.html
+++ b/work.html
@@ -122,7 +122,7 @@
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">         
       
-                    <img src="images/dvd.jpg" alt="">
+                    <img src="images/dpd.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -138,7 +138,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/dki.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -154,7 +154,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/hfy.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -170,7 +170,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/irg.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -186,7 +186,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/kh.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -202,7 +202,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/fkr.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -218,7 +218,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/mnwr.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -234,7 +234,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/ptri.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -250,7 +250,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/rfj.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -266,7 +266,7 @@
    <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/rni.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -282,7 +282,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/sptn.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
