--- a/index.html
+++ b/index.html
@@ -110,9 +110,10 @@
                   <div class="detail-box">
                     <h1>
                       hello!!! <br>
-                      selamat datang di XI TJKT C <br>
+                      selamat datang di <br>
                      
                     </h1>
+                    <h1>XI TJKT C </h1>
                     <p>
                      SMK NEGERI 1 PADAHERANG
                     </p>
