--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </div>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">01</li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1">02</li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2">03</li>
         </ol>
@@ -481,7 +481,7 @@
           <div class="col-md-6">
             <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="img-box">
-                <img src="" alt="">
+                <img src="images/BGC.png" alt="">
               </div>
          
             <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
