--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
           <div class="col-md-6">
             <div class="collapse show" id="collapseOne" aria-labelledby="headingOne" data-parent="#accordion">
               <div class="img-box">
-                <img src="images/BGC.png" alt="">
+                <img src="" alt="">
               </div>
          
             <div class="collapse" id="collapseThree" aria-labelledby="headingThree" data-parent="#accordion">
