--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       <div class="row">
         <div class="col-md-10 col-lg-9 mx-auto">
           <div class="img-box">
-            <img src="images/about-img.jpg" alt="">
+            <img src="images/tjktisra.jpg" alt="">
           </div>
         </div>
       </div>
