--- a/work.html
+++ b/work.html
@@ -170,7 +170,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/ilf.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
