--- a/about.html
+++ b/about.html
@@ -110,10 +110,10 @@
               TJKT adalah Salah satu jurusan di Sekolah Menengah Kejuruan (SMK) yang mengakomodir lulusan kerja yang siap dalam menghadapi perkembangan teknologi adalah jurusan Teknik Jaringan Komputer dan Telekomunikasi (TJKT).
             </p>
             <div class="btn-box">
-              <a href="" class="btn-1">
+              <a href="https://smkn1padaherang.sch.id/" class="btn-1">
                 baca lagi
               </a>
-              <a href="" class="btn-2">
+              <a href="https://smkn1padaherang.sch.id/teknik-komputer-jaringan" class="btn-2">
                 disini
               </a>
             </div>
