--- a/index.html
+++ b/index.html
@@ -301,6 +301,22 @@
                     </h3>
                   </div>
                 </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="https://www.portfoliobox.net/pb4/admin?preview=1#/portofoliodavinugraha">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      Davi Nugraha
+                    </h3>
+                  </div>
+                </div>
                  <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
@@ -315,6 +331,22 @@
                     </h5>
                     <h3>
                       David Eka Unsiawan
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="https://sites.google.com/view/portofolio-dede-risma-xitjktc/">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      Dede Risma
                     </h3>
                   </div>
                 </div>  
@@ -469,12 +501,28 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://sites.google.com/view/reni-dwi-oktavia-fortopolio/halaman-muka">
+                      <a href="https://sites.google.com/view/renidwioktavia/halaman-muka">
                         selengkapnya
                       </a>
                     </h5>
                     <h3>
                       Reni Dwi Oktavia
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="https://sites.google.com/view/rizki-triana/beranda">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      Rizki Triana
                     </h3>
                   </div>
                 </div>
