--- a/work.html
+++ b/work.html
@@ -318,7 +318,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://sites.google.com/view/renidwioktavia/halaman-muka">
+                      <a href="https://sites.google.com/view/renidwioktavia/profil?authuser=0">
                         selengkapnya
                       </a>
                     </h5>
