--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                   </div>
                   <div class="detail-box">
                     <h5>
-                      <a href="https://sites.google.com/view/renidwioktavia/halaman-muka">
+                      <a href="https://sites.google.com/view/renidwioktavia/profil?authuser=0">
                         selengkapnya
                       </a>
                     </h5>
