--- a/work.html
+++ b/work.html
@@ -170,6 +170,22 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="https://sites.google.com/view/sjususbdbdbi/beranda">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      Ishaq Amin Mutaqqin
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
                     <img src="images/dki.jpg" alt="">
                   </div>
                   <div class="detail-box">
