--- a/work.html
+++ b/work.html
@@ -163,26 +163,11 @@
                       </a>
                     </h5>
                     <h3>
-                      Irgi Nurdiansyah
+                      Dede Risma
                     </h3>
                   </div>
                 </div>
-<div class="tab_container">
-                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                  <div class="img-box">
-                    <img src="images/.jpg" alt="">
-                  </div>
-                  <div class="detail-box">
-                    <h5>
-                      <a href="https://sites.google.com/view/sjususbdbdbi/beranda">
-                        selengkapnya
-                      </a>
-                    </h5>
-                    <h3>
-                      Ishaq Amin Mutaqqin
-                    </h3>
-                  </div>
-                </div>
+
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
@@ -244,6 +229,22 @@
                     </h5>
                     <h3>
                       Irgi Nurdiansyah
+                    </h3>
+                  </div>
+                </div>
+<div class="tab_container">
+                <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="img-box">
+                    <img src="images/.jpg" alt="">
+                  </div>
+                  <div class="detail-box">
+                    <h5>
+                      <a href="https://sites.google.com/view/sjususbdbdbi/beranda">
+                        selengkapnya
+                      </a>
+                    </h5>
+                    <h3>
+                      Ishaq Amin Mutaqqin
                     </h3>
                   </div>
                 </div>
