--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/dvi.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -337,7 +337,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/dd.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -417,7 +417,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/ishq.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -529,7 +529,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/rzk.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
