--- a/work.html
+++ b/work.html
@@ -121,7 +121,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/dvi.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -154,7 +154,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/dd.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -235,7 +235,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/ishq.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
@@ -347,7 +347,7 @@
 <div class="tab_container">
                 <div class="t-link-box" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                   <div class="img-box">
-                    <img src="images/.jpg" alt="">
+                    <img src="images/rzk.jpg" alt="">
                   </div>
                   <div class="detail-box">
                     <h5>
